CQC for Java completed